fix: Don't add padding above footnotes
Need a better way to distinguish between footnotes and main content, but
this doesn't look great.

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -40,7 +40,6 @@ $font-code: "Jetbrains Mono", monospace;
 
 .footnotes {
   font-size: smaller;
-  padding-top: 0.5em;
 }
 
 .footnotes-list {
